# lab1_prog

./: CMakeLists.txt  README.md  lib.cpp  lib.h  main.cpp  test_version.cpp  version.h.in
resources/: Info.plist
